[package]
name = "test_utils"
version = "0.2.0"
description = "Utility functions to run rust tests."
authors = ["Thibaut Roche <thibaut.roche.perso@gmail.com>"]
license = "MIT"
repository = "https://github.com/Aeradriel/rs_test_utils.git"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres","r2d2"], optional = true }
rocket = { version = "0.4.0-rc.1", optional = true }
dotenv = { version = "0.13.0", optional = true }
lazy_static = { version = "1.2.0", optional = true }

[features]
default = ["postgres", "dotenv", "rocket_support"]
postgres = ["diesel"]
rocket_support = ["rocket", "lazy_static", "diesel"]

[package.metadata.docs.rs]
all-features = true